syntax = "proto3";

package com.manoj.grpc;

option go_package = "github.com/12Manoz/poc-grpc-proto2swagger/proto";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
